[package]
name = "external_dx11_overlay"
version = "0.2.0"
edition = "2024"
# needed for nexus addon info
authors = ["SorryQuick", "Deathmore.3741"]
description = "External DX11 Overlay"
repository = "https://github.com/SorryQuick/external-dx11-overlay"

[lib]
name = "external_dx11_overlay"
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
default = []
nexus = ["dep:nexus", "dep:rfd"]

[dependencies]
retour = { version="0.3.1", features=["static-detour"]}
log = "0.4"
fern = "0.7"
chrono = "*"
fontdue = "*"
nexus = { git = "https://github.com/zerthox/nexus-rs", features = ["log", "log_filter"], optional = true }
rfd = { version = "0.15", optional = true }

[dependencies.windows]
version = "0.56"
features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Console",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_Security",
    "Win32_System_ProcessStatus",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Controls",
    "Foundation_Numerics",
    "Win32_Devices_HumanInterfaceDevice",
]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
